# llm-temporal-worker

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTER_REPORT.md  Makefile  README.md  compose.yaml  config.example.yaml  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: live-provider-contracts.yml  master.yml  pull-request.yml  release.yml
activity/: activities.go  activities_test.go  context.go  errors.go  errors_test.go  heartbeat.go  keepalive.go  keepalive_test.go  metrics_test.go  options.go  options_test.go  payload_test.go  types.go
admission/: contract_test.go  transition.go  transition_property_test.go  types.go
budget/: estimate.go  estimate_test.go  match.go  match_window_test.go  policy.go  window.go  window_fuzz_test.go  window_property_test.go
cmd/llm-temporal-worker/: commands.go  commands_test.go  main.go
config/: load.go  load_test.go  snapshot_test.go  types.go  validate.go  validate_test.go
deploy/: README.md  verify.sh
deploy/local/: README.md  config.yaml  prices.yaml
docs/: index.md  scope.md
docs/architecture/: checkpoint-materializer.md  conversation-checkpoints-and-compaction.md  deployment-and-operations.md  ocaml-conversation-and-query-client.md  package-layout.md  postgresql-state-cache-and-control-plane.md  pricing-and-budgets.md  provider-adapters.md  routing-and-continuation.md  security-and-privacy.md  state-and-storage.md  system-overview.md  temporal-worker.md  unified-api.md
docs/decisions/: 0001-semantic-ir-and-official-sdks.md  0002-service-classes.md  0003-durable-ledger-and-retry-boundary.md  0004-redis-shared-state.md  0005-streaming-boundary.md  0006-forkable-conversation-checkpoints.md  0007-postgresql-authoritative-state-and-response-cache.md  0008-resumable-provider-operations-and-typed-queries.md  index.md
docs/reference/: activity-runtime.md  blob-garbage-collection.md  catalog-loaders.md  (+20 more)
engine/: assemble.go  attempt.go  benchmark_redis_test.go  benchmark_test.go  dependencies.go  engine_test.go  finalize.go  generate.go  heartbeat_context_test.go  metrics.go  metrics_test.go  metrics_test_helpers_test.go  openairesponses_stream_test.go  pricing_policy_test.go  stream.go  stream_test.go  telemetry.go  telemetry_test.go
golang/: Dockerfile  Makefile  compose.yaml  config.example.yaml  go.mod  go.sum
integration/: image_integration_test.go  readiness_integration_test.go  temporal_lifecycle_test.go
llm/: canonicaljson_fuzz_test.go  canonicaljson_test.go  digest.go  engine.go  item.go  jsonutil.go  normalize.go  normalize_test.go  request_canonicalization_fuzz_test.go  request_json_test.go  response.go  service_class_property_test.go  stream.go  stream_test.go  tool.go  version_test.go
ocaml/llm_temporal_worker/: README.md  dune-project  llm-temporal-ocaml.opam
ocaml/llm_temporal_worker/lib/: dune  llm_temporal.ml  llm_temporal.mli  llm_temporal_codec.ml  llm_temporal_conversation.ml  llm_temporal_conversation.mli  llm_temporal_generate.ml  llm_temporal_generate.mli  llm_temporal_identifier.ml  llm_temporal_identifier.mli  llm_temporal_invocation.ml  llm_temporal_invocation.mli  llm_temporal_models.ml  llm_temporal_models.mli  llm_temporal_query.ml  llm_temporal_query.mli  llm_temporal_usd_decimal.ml  llm_temporal_usd_decimal.mli  llm_temporal_v1_codec.ml  llm_temporal_v1_codec.mli
ocaml/llm_temporal_worker/test/: dune  test_activity.ml  test_conversation.ml  test_generate.ml  test_query.ml  test_v1_protocol.ml  test_wrapper.ml
ocaml/llm_temporal_worker/test/fixtures/task17/: README.md  compact-request.invalid-parent.json  compact-request.json  generate-request.invalid-temperature.json  generate-request.json  query-envelope.invalid-kind.json  query-envelope.json
pricing/: arithmetic_fuzz_test.go  catalog.go  catalog_test.go  cost.go  decimal.go
routing/: capability.go  executor_policy.go  plan_canonicalization_fuzz_test.go  plan_canonicalization_test.go  planner.go  planner_property_test.go  planner_test.go  types.go
scripts/: check-ocaml-temporal-pin.sh  check-workflow-policy.sh  redact-compose-logs.sh  run-fuzz.sh  run-mutation.sh
state/: continuation.go  continuation_test.go  error.go  handle.go  handle_property_test.go  handle_test.go  pinning.go  pinning_test.go
(+1018 files in other folders)
