(library
 (name llm_temporal)
 (public_name llm-temporal-ocaml)
 ;; Identifier/model/decimal interfaces are installed so public aliases retain
 ;; one nominal type identity for downstream packages.  Codec and workflow
 ;; implementation modules remain private behind [Llm_temporal].
 (private_modules llm_temporal_codec llm_temporal_v1_codec llm_temporal_invocation llm_temporal_conversation llm_temporal_query llm_temporal_generate)
 (libraries temporal-sdk yojson base64 ptime))
