(test
 (name test_wrapper)
 (libraries llm_temporal temporal-sdk yojson))

(test
 (name test_conversation)
 (libraries llm_temporal temporal-sdk yojson))

(test
 (name test_v1_protocol)
 (libraries llm_temporal temporal-sdk yojson ptime)
 (deps (source_tree fixtures)))

(test
 (name test_query)
 (libraries llm_temporal temporal-sdk yojson ptime))

(test
 (name test_activity)
 (libraries llm_temporal temporal-sdk yojson))

(test
 (name test_generate)
 (libraries llm_temporal temporal-sdk yojson))
